# GET_API_Supabase_Tiximax

./: .gitignore  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  supabase_api.py  vercel.json
api/: index.py  main.py  supabase.py
