[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "supabase-proxy"          # bắt buộc có
version = "0.1.0"                # bắt buộc có
requires-python = ">=3.11,<3.12" # hoặc =">3.11,<3.12"

[tool.uv]
# (tùy chọn) nếu muốn tắt một số cảnh báo của uv
default-groups = []